# AMP_walking

./: AMP_DEPLOY_FIX_SUMMARY.md  DEBUG_INSTRUMENTATION_GUIDE.md  README.md
deploy/include/FSM/: State_FixStand.h  State_RLBase.h
deploy/include/isaaclab/algorithms/: algorithms.h
deploy/include/isaaclab/envs/: manager_based_rl_env.h
deploy/include/isaaclab/envs/mdp/actions/: joint_actions.h
deploy/include/isaaclab/envs/mdp/observations/: observations.h
deploy/include/isaaclab/manager/: manager_term_cfg.h  observation_manager.h
deploy/include/isaaclab/utils/: debug_utils.h
deploy/robots/g1_23dof/src/: State_RLBase.cpp
deploy/robots/g1_29dof/: CMakeLists.txt
deploy/robots/g1_29dof/config/policy/velocity/v0/exported/: policy.onnx  policy_old.onnx
deploy/robots/g1_29dof/config/policy/velocity/v0/params/: deploy.yaml
deploy/robots/g1_29dof/src/: State_RLBase.cpp
scripts/: README_FK_DIAGNOSTICS.md  check_onnx_io.py  compare_obs_dumps.py  dump_amp_obs.py  extract_fk_calibration.py  extract_fk_from_usd.py  generate_fk_from_usd.py  list_envs.py  regenerate_deploy_yaml.py  test_fk.cpp  test_fk_python.py  test_fk_standalone.cpp  verify_deploy_yaml.py
scripts/rsl_rl/: play.py  sim2sim.py  train.py
scripts/tools/: print_lab_joint_body_names.py
scripts/tools/retarget/config/: g1_29dof.yaml
source/legged_lab/legged_lab/managers/: animation_manager.py  animation_manager_cfg.py  motion_data_manager.py
source/legged_lab/legged_lab/rsl_rl/: rl_cfg.py
source/legged_lab/legged_lab/utils/: export_deploy_cfg.py
(+8 files in other folders)
